# RainTorch

./: CMakeLists.txt  README.md
examples/cpp/: demo_node.cc  main.cc
src/autograd/: node.cc  node.h  ops.cc  ops.h
tests/: graph.cc  main.cc  main.py  test.cc
